--- a/sql.html
+++ b/sql.html
@@ -13,6 +13,7 @@
 			<ul class="menu">
 				<li><a href="index.html">JIRA</a></li>
 				<li><a href="sql.html">SQL</a></li>
+                <li><a href="cv.html">CV</a></li>
 			</ul>
 		</nav>
 	</header>
