--- a/cv.html
+++ b/cv.html
@@ -40,6 +40,11 @@
                         <p><strong><span class="icon fa-git"></span>&nbsp;&nbsp;Github</strong></p>
                         <p><a href="https://github.com/Michaljezko">Github</a></p>
                    </div>
+
+                   <div class="contact">
+                        <p><strong><span class="icon fa-linkedin"></span>&nbsp;&nbsp;Linkedin</strong></p>
+                        <p><a href="https://www.linkedin.com/in/michal-marian%C4%8Dik-5a6b53290/">Linkedin</a></p>
+                   </div>
     
                    <h2>Expertise</h2>
                    
@@ -150,6 +155,11 @@
                     <p><strong><span class="icon fa-git"></span>&nbsp;&nbsp;Github</strong></p>
                     <p><a href="https://github.com/Michaljezko">Github</a></p>
                </div>
+
+               <div class="contact">
+                <p><strong><span class="icon fa-linkedin"></span>&nbsp;&nbsp;Linkedin</strong></p>
+                <p><a href="https://www.linkedin.com/in/michal-marian%C4%8Dik-5a6b53290/">Linkedin</a></p>
+           </div>
 
                <h2>Education</h2>
                 <p><strong>Obchodná akadémia</strong>Stará Ľubovňa</p>
