--- a/cv.html
+++ b/cv.html
@@ -238,7 +238,7 @@
                 </ul>
                 <h4>SQL</h4>
                 <ul class="portfolio">
-                    <li><a href="https://michaljezko.github.io/sql.html">SQL basic example</a></li>
+                    <li class="last-line"><a href="https://michaljezko.github.io/sql.html">SQL basic example</a></li>
                 </ul>
         </section>
                 
